--- a/css/style.css
+++ b/css/style.css
@@ -2,42 +2,65 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 :root {
 
     --primary-color: #E02C6D;
-    --secondary-color:#3A3A3A;
-    --product-title-color:#18191F;
-    --product_description_color:#787885;
+    --secondary-color: #3A3A3A;
+    --product-title-color: #18191F;
+    --product_description_color: #787885;
     --primary-font: 'Poppins', sans-serif;
     --secondary-font: 'Inter', sans-serif;
     --third-font: 'Manrope', sans-serif;
 }
-li{
+
+li {
     list-style: none;
     margin: 0;
 }
 
-.container{
+.container {
     width: 80%;
     margin: 0 auto;
 }
-a{
+
+a {
     text-decoration: none;
 }
 
+.btn {
+
+    padding: 15px 20px;
+    background-color: var(--primary-color);
+    display: inline-block;
+    font-family: var(--primary-font);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    border: none;
+    margin-top: 10px;
+    border-radius: 41px;
+
+}
+/* section padding  */
+section.banner {
+    padding: 50px 0;
+}
 
 /* -----------------
       header styles
 --------------------  */
-header{
+header {
     padding: 30px 0;
 }
-.logo__title{
+
+.logo__title {
     font-family: var(--primary-font);
     font-weight: 700;
     font-size: 24px;
@@ -45,34 +68,70 @@ header{
     font-feature-settings: 'liga' off;
     color: var(--secondary-font);
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-nav ul{
+nav ul {
     display: flex;
     align-items: center;
 }
-nav ul li{
+
+nav ul li {
     margin: 0 20px;
 }
-nav li a{
+
+nav li a {
     font-family: var(--primary-font);
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
     font-feature-settings: 'liga' off;
-    color: var(--secondary-color);  
+    color: var(--secondary-color);
 }
 
 
 /*---------------
  banner styles 
  ----------------*/
- .banner__wrapper{
+.banner__wrapper {
     display: flex;
     justify-content: space-around;
     align-items: center;
- }
+}
+
+.content__wrap {
+    width: 50%;
+}
+
+.banner__title {
+    font-family: var(--primary-font);
+    font-weight: 700;
+    font-size: 52px;
+    line-height: 70px;
+    color: var(--secondary-color);
+}
+
+.banner__des {
+    font-family: var(--primary-font);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'liga' off;
+    color: var(--secondary-color);
+    margin: 10px 0;
+}
+
+.image__wrap {
+    width: 50%;
+    text-align: right;
+}
+.image__wrap img{
+    width: 65%;
+    padding: 20px;
+    border: 1px solid #F1E4FF;
+    border-radius: 50%;  
+}
