--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ a {
     margin-left: 5px;
 }
 
-
 /*-----------------
  section padding
 -------------------*/
@@ -88,6 +87,11 @@ section.featured__product,
 /* -----------------
       header styles
 --------------------  */
+
+/* phone nav  */
+nav.phone__nav{
+    display: none;
+}
 header {
     padding: 30px 0;
 }
@@ -346,4 +350,83 @@ margin: 10px 0;
     background-color: #23203A;
 
 
+}
+
+
+/*-------------------
+ resposive styles
+---------------------*/
+
+/*------------------------
+ max width 992px styles
+--------------------------*/
+
+@media (max-width:992px){
+
+    nav.phone__nav{
+        display: block;
+        display: flex;
+        justify-content: space-between;
+    }
+  
+    nav.destop__nav{
+        display: none;
+    }
+    .image__wrap img {
+        width: 100%;
+    }
+    .banner__title {
+        font-size: 45px;
+        line-height: 58px;
+    }
+    .brand__wrapper {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 100px);
+    }
+    .products__wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .featured__title {
+        font-size: 25px;
+        line-height: 35px;
+    }
+    .featured__des {
+        font-size: 15px;
+        line-height: 28px;
+        margin: 6px 0;
+    }
+    .featured__product_wrapper img {
+        width: 100%;
+    }
+}
+
+/*-------------------------
+ max width 767px styles
+---------------------------*/
+
+@media(max-width:767px){
+
+    .banner__wrapper {
+        flex-direction: column-reverse;
+    }
+    .image__wrap {
+        width: 100%;
+    }
+    .content__wrap {
+        width: 100%;
+    }
+    .brand__wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 100px);
+    }
+    .products__wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .featured__product_wrapper {
+        flex-direction: column-reverse;
+    }
+    .image_wrap {
+        width: 100%;
+        margin-top: 10px;
+    }
 }
