--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,67 @@
 /* fonts  */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 :root {
-
-    --primary-color: #E02C6D;
-    --secondary-color: #3A3A3A;
-    --product-title-color: #18191F;
-    --product_description_color: #787885;
-    --primary-font: 'Poppins', sans-serif;
-    --secondary-font: 'Inter', sans-serif;
-    --third-font: 'Manrope', sans-serif;
+  --primary-color: #e02c6d;
+  --secondary-color: #3a3a3a;
+  --product-title-color: #18191f;
+  --product_description_color: #787885;
+  --primary-font: "Poppins", sans-serif;
+  --secondary-font: "Inter", sans-serif;
+  --third-font: "Manrope", sans-serif;
 }
 
 li {
-    list-style: none;
-    margin: 0;
+  list-style: none;
+  margin: 0;
 }
 
 .container {
-    width: 80%;
-    margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .btn {
-
-    padding: 15px 20px;
-    background-color: var(--primary-color);
-    display: inline-block;
-    font-family: var(--primary-font);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    color: #FFFFFF;
-    border: none;
-    margin-top: 10px;
-    border-radius: 41px;
+  padding: 10px 25px;
+  background-color: var(--primary-color);
+  display: inline-block;
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  border: none;
+  margin-top: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+  transition: 0.5s;
+}
+.btn:hover {
+  background-color: transparent;
+  border: 1px solid var(--primary-color);
+  color: #000;
+  transition: 0.5s;
 }
 
 .btn i {
-    font-size: 15px;
-    margin-left: 5px;
+  font-size: 15px;
+  margin-left: 5px;
 }
 
 /*-----------------
@@ -63,10 +70,10 @@ a {
 
 section.banner,
 section.brand,
- section.products,
+section.products,
 section.featured__product,
 .footer {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 /*----------------------
@@ -74,15 +81,22 @@ section.featured__product,
 ------------------------*/
 
 .section__title {
-    font-family: var(--primary-font);
-    font-weight: 600;
-    font-size: 28px;
-    line-height: 70px;
-    text-align: center;
-    color: var(--secondary-color);
-    margin-bottom: 30px;
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 70px;
+  text-align: center;
+  color: var(--secondary-color);
+  margin-bottom: 30px;
 }
 
+/* make two collumn  */
+.col__two {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
 
 /* -----------------
       header styles
@@ -90,124 +104,117 @@ section.featured__product,
 
 /* phone nav  */
 
-
-
-
-nav.phone__nav{
-    display: none;
+nav.phone__nav {
+  display: none;
 }
 ul.mobile__menu {
-    flex-direction: column;
-    position: absolute;
-    top: 75px;
-    left: -111px;
-    padding: 10px 15px;
-    /* margin-top: 16px; */
-    transition: .5s;
-    
+  flex-direction: column;
+  position: absolute;
+  top: 75px;
+  left: -111px;
+  padding: 10px 15px;
+  /* margin-top: 16px; */
+  transition: 0.5s;
 }
-
 
 .show__mobile__menu {
-    position: absolute !important;
-    left: 40px !important;
-    top: 75px !important;
-    width: 200px !important;
-    background-color: #6C6C6C !important;
-    border-radius: 5px;
-    transition: .5s;
+  position: absolute !important;
+  left: 40px !important;
+  top: 75px !important;
+  width: 200px !important;
+  background-color: #6c6c6c !important;
+  border-radius: 5px;
+  transition: 0.5s;
 }
 
-.show__mobile__menu li{
-    width: 100%;
-    padding: 5px 0;
-    margin: 0 !important;
+.show__mobile__menu li {
+  width: 100%;
+  padding: 5px 0;
+  margin: 0 !important;
 }
-.show__mobile__menu li a{
-    color: #fff !important;
-    display: block !important;
+.show__mobile__menu li a {
+  color: #fff !important;
+  display: block !important;
 }
-
 
 header {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 
 .logo__title {
-    font-family: var(--primary-font);
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    font-feature-settings: 'liga' off;
-    color: var(--secondary-font);
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  font-feature-settings: "liga" off;
+  color: var(--secondary-font);
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav ul {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 nav ul li {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
 nav li a {
-    font-family: var(--primary-font);
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    font-feature-settings: 'liga' off;
-    color: var(--secondary-color);
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  font-feature-settings: "liga" off;
+  color: var(--secondary-color);
 }
-
 
 /*---------------
  banner styles 
  ----------------*/
 .banner__wrapper {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .content__wrap {
-    width: 50%;
+  width: 50%;
 }
 
 .banner__title {
-    font-family: var(--primary-font);
-    font-weight: 700;
-    font-size: 52px;
-    line-height: 70px;
-    color: var(--secondary-color);
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 70px;
+  color: var(--secondary-color);
 }
 
 .banner__des {
-    font-family: var(--primary-font);
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    font-feature-settings: 'liga' off;
-    color: var(--secondary-color);
-    margin: 10px 0;
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  font-feature-settings: "liga" off;
+  color: var(--secondary-color);
+  margin: 10px 0;
 }
 
 .image__wrap {
-    width: 50%;
-    text-align: right;
+  width: 50%;
+  text-align: right;
 }
 
 .image__wrap img {
-    width: 65%;
-    padding: 20px;
-    border: 1px solid #F1E4FF;
-    border-radius: 50%;
+  width: 65%;
+  padding: 20px;
+  border: 1px solid #f1e4ff;
+  border-radius: 50%;
 }
 
 /*------------
@@ -215,91 +222,89 @@ nav li a {
 --------------*/
 
 .brand__wrapper {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(1, 150px);
-    align-items: center;
-    border-top: 1px solid #C0CCDA;
-    border-bottom: 1px solid #C0CCDA;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(1, 150px);
+  align-items: center;
+  border-top: 1px solid #c0ccda;
+  border-bottom: 1px solid #c0ccda;
 }
 
 /*-----------------------
  product section styles 
 -------------------------*/
 .products .container {
-    width: 75%;
+  width: 75%;
 }
 
 .products__wrapper {
-    display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .single__product {
-    background: #FFFFFF;
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    border-radius: 5px;
-    padding: 20px;
+  background: #ffffff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .single__product img {
-    width: 100%;
-
+  width: 100%;
 }
 
 .product__title {
-    font-family: var(--primary-font);
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 40px;
-    margin-top: 10px;
-    font-feature-settings: 'liga' off;
-    color: var(--product-title-color);
+  font-family: var(--primary-font);
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 40px;
+  margin-top: 10px;
+  font-feature-settings: "liga" off;
+  color: var(--product-title-color);
 }
 
 .price {
-    font-family: var(--secondary-font);
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 150%;
-    color: rgba(0, 0, 0, 0.87);
-    margin-top: 8px;
+  font-family: var(--secondary-font);
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 150%;
+  color: rgba(0, 0, 0, 0.87);
+  margin-top: 8px;
 }
 
 .ratting {
-    font-family: var(--primary-font);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.1px;
-    color: var(--secondary-color);
-    margin-top: 5px;
-
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.1px;
+  color: var(--secondary-color);
+  margin-top: 5px;
 }
 
 .ratting .fa-solid {
-    color: #FB8200;
+  color: #fb8200;
 }
 
 .product__des {
-    font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 143%;
-    letter-spacing: 0.018em;
-    color: #787885;
-    margin-bottom: 8px;
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 143%;
+  letter-spacing: 0.018em;
+  color: #787885;
+  margin-bottom: 8px;
 }
 
 .btn_wrapper {
-    text-align: right;
+  text-align: right;
 }
 
 .btn_wrapper .btn {
-    background-color: #fff;
-    color: var(--primary-color);
-    margin-top: 30px;
+  background-color: #fff;
+  color: var(--primary-color);
+  margin-top: 30px;
 }
 
 /*------------------------
@@ -307,88 +312,124 @@ nav li a {
 --------------------------*/
 
 .featured__product_wrapper {
-    display: flex;
-    gap: 20px;
-    align-items: center;
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .image_wrap {
-    width: 50%;
+  width: 50%;
 }
 
 .content__wrap {
-    width: 50%;
+  width: 50%;
 }
 
 .featured__title {
-    font-family: var(--primary-font);
-    font-weight: 700;
-    font-size: 38px;
-    line-height: 60px;
-    color: var(--product-title-color);
-  
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 60px;
+  color: var(--product-title-color);
 }
-.featured__des{
-    font-family: var(--primary-font);
-font-weight: 700;
-font-size: 16px;
-line-height: 28px;
-color: #6C6C6C;
-margin: 13px 0;
+.featured__des {
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 28px;
+  color: #6c6c6c;
+  margin: 13px 0;
 }
-.featured__product_wrapper .btn{
-    border-radius: 0;
-    padding: 10px 30px;
-    line-height: 30px;
+.featured__product_wrapper .btn {
+  border-radius: 0;
+  padding: 10px 30px;
+  line-height: 30px;
 }
-.featured__product_wrapper img{
-    width: 80%;
+.featured__product_wrapper img {
+  width: 80%;
 }
+
+/* singup page css start here  */
+
+.singup_wrapper {
+  width: 60%;
+  margin: auto;
+  padding: 100px 0;
+}
+.singup__img img {
+  width: 100%;
+}
+
+.singup__form {
+  padding: 20px;
+}
+
+label {
+  color: var(--primary-color);
+}
+input[type="text"],
+input[type="number"],
+input[type="password"],
+input[type="email"] {
+  padding: 10px 5px;
+  width: 100%;
+  box-shadow: #3a3a3a;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid var(--primary-color);
+  outline: none;
+  border-radius: 3px;
+}
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus {
+  border-bottom: 1px solid var(--product_description_color);
+}
+
+/* singup page css end here  */
 
 /*----------------- 
 footer styles 
 --------------------*/
 
-.footer{
-    background-color: #0B0725;
-    color: #fff;
-    text-align: center;
+.footer {
+  background-color: #0b0725;
+  color: #fff;
+  text-align: center;
 }
-.logo__content{
-    font-family: var(--primary-font);
-font-weight: 700;
-font-size: 24px;
-line-height: 36px;
-font-feature-settings: 'liga' off;
-color: #FFFFFF;
-}
-
-.copy__right{
-    font-family: var(--third-font);
-font-weight: 700;
-font-size: 14px;
-line-height: 24px;
-font-feature-settings: 'liga' off;
-color: #D9DBE1;
-margin: 10px 0;
+.logo__content {
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  font-feature-settings: "liga" off;
+  color: #ffffff;
 }
 
-.footer ul{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-}
-.footer ul li{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    line-height: 40px;
-    font-size: 18px;
-    background-color: #23203A;
-
-
+.copy__right {
+  font-family: var(--third-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-feature-settings: "liga" off;
+  color: #d9dbe1;
+  margin: 10px 0;
 }
 
+.footer ul {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+.footer ul li {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  line-height: 40px;
+  font-size: 18px;
+  background-color: #23203a;
+}
 
 /*-------------------
  resposive styles
@@ -398,72 +439,82 @@ margin: 10px 0;
  max width 992px styles
 --------------------------*/
 
-@media (max-width:992px){
+@media (max-width: 992px) {
+  nav.phone__nav {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    nav.phone__nav{
-        display: block;
-        display: flex;
-        justify-content: space-between;
-    }
-  
-    nav.destop__nav{
-        display: none;
-    }
-    .image__wrap img {
-        width: 100%;
-    }
-    .banner__title {
-        font-size: 45px;
-        line-height: 58px;
-    }
-    .brand__wrapper {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 100px);
-    }
-    .products__wrapper {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .featured__title {
-        font-size: 25px;
-        line-height: 35px;
-    }
-    .featured__des {
-        font-size: 15px;
-        line-height: 28px;
-        margin: 6px 0;
-    }
-    .featured__product_wrapper img {
-        width: 100%;
-    }
+  nav.destop__nav {
+    display: none;
+  }
+  .image__wrap img {
+    width: 100%;
+  }
+  .banner__title {
+    font-size: 45px;
+    line-height: 58px;
+  }
+  .brand__wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 100px);
+  }
+  .products__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .featured__title {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  .featured__des {
+    font-size: 15px;
+    line-height: 28px;
+    margin: 6px 0;
+  }
+  .featured__product_wrapper img {
+    width: 100%;
+  }
 }
 
 /*-------------------------
  max width 767px styles
 ---------------------------*/
 
-@media(max-width:767px){
+@media (max-width: 767px) {
+/* collumn responsive  */
+    .col__two{
+    grid-template-columns: auto;
+    }
+  .banner__wrapper {
+    flex-direction: column-reverse;
+  }
+  .image__wrap {
+    width: 100%;
+  }
+  .content__wrap {
+    width: 100%;
+  }
+  .brand__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 100px);
+  }
+  .products__wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .featured__product_wrapper {
+    flex-direction: column-reverse;
+  }
+  .image_wrap {
+    width: 100%;
+    margin-top: 10px;
+  }
 
-    .banner__wrapper {
-        flex-direction: column-reverse;
-    }
-    .image__wrap {
-        width: 100%;
-    }
-    .content__wrap {
-        width: 100%;
-    }
-    .brand__wrapper {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 100px);
-    }
-    .products__wrapper {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .featured__product_wrapper {
-        flex-direction: column-reverse;
-    }
-    .image_wrap {
-        width: 100%;
-        margin-top: 10px;
-    }
+/* singup page css  */
+.singup_wrapper {
+    width: 80%;
+}
+.singup__form{
+    padding: 0;
+}
 }
