--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ a {
 }
 
 .card {
+  overflow: hidden;
   background: #ffffff;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
@@ -119,6 +120,49 @@ a {
 .card img {
   width: 100%;
 }
+
+
+
+/* card image hover  */
+
+
+/* Shine */
+.card figure {
+	position: relative;
+}
+.card figure::before {
+	position: absolute;
+	top: 0;
+	left: -75%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 50%;
+	height: 100%;
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	-webkit-transform: skewX(-25deg);
+	transform: skewX(-25deg);
+}
+.card figure:hover::before {
+	-webkit-animation: shine .75s;
+	animation: shine .75s;
+}
+@-webkit-keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+@keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+
+
+
+
+
 /* -----------------
       header styles
 --------------------  */
@@ -547,3 +591,5 @@ footer styles
     padding: 0;
 }
 }
+
+
