services section add

--- a/css/style.css
+++ b/css/style.css
@@ -101,12 +101,11 @@ a {
   grid-template-columns: repeat(3, 1fr);
 }
 
-
 /* make four collumn  */
-.col__four{
+.col__four {
   gap: 20px;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .card {
@@ -121,47 +120,48 @@ a {
   width: 100%;
 }
 
-
-
 /* card image hover  */
-
 
 /* Shine */
 .card figure {
-	position: relative;
+  position: relative;
 }
 .card figure::before {
-	position: absolute;
-	top: 0;
-	left: -75%;
-	z-index: 2;
-	display: block;
-	content: '';
-	width: 50%;
-	height: 100%;
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-	-webkit-transform: skewX(-25deg);
-	transform: skewX(-25deg);
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
 }
 .card figure:hover::before {
-	-webkit-animation: shine .75s;
-	animation: shine .75s;
+  -webkit-animation: shine 0.75s;
+  animation: shine 0.75s;
 }
 @-webkit-keyframes shine {
-	100% {
-		left: 125%;
-	}
+  100% {
+    left: 125%;
+  }
 }
 @keyframes shine {
-	100% {
-		left: 125%;
-	}
+  100% {
+    left: 125%;
+  }
 }
-
-
-
-
 
 /* -----------------
       header styles
@@ -183,7 +183,6 @@ ul.mobile__menu {
   top: 75px;
   left: -111px;
   padding: 10px 15px;
-  /* margin-top: 16px; */
   transition: 0.5s;
 }
 
@@ -244,11 +243,9 @@ nav li a {
   color: var(--secondary-color);
 }
 
-
-.destop__nav ul{
+.destop__nav ul {
   position: relative;
 }
-
 
 /*---------------
  banner styles 
@@ -306,13 +303,23 @@ nav li a {
   border-bottom: 1px solid #c0ccda;
 }
 
+/*------------
+/* services section css start here  */
+.services__content__wrap {
+  text-align: center;
+}
+.services__content__wrap h3{
+  margin: 10px 0;
+}
+/* services section css end here  */
+--------------*/
+
+
+
+
 /*-----------------------
  product section styles 
 -------------------------*/
-/* .products .container {
-  width: 75%;
-} */
-
 
 
 .product__title {
@@ -451,18 +458,9 @@ input[type="email"]:focus {
 
 /* singup page css end here  */
 
-
-
 /* search bar css start here  */
 
-
-
-
-
-
 /* search bar css end here  */
-
-
 
 /*----------------- 
 footer styles 
@@ -505,7 +503,6 @@ footer styles
   font-size: 18px;
   background-color: #23203a;
 }
-
 
 /*-------------------
  resposive styles
@@ -558,13 +555,13 @@ footer styles
 ---------------------------*/
 
 @media (max-width: 767px) {
-/* collumn responsive  */
-    .col__two{
+  /* collumn responsive  */
+  .col__two {
     grid-template-columns: auto;
-    }
-    .col__three{
-      grid-template-columns: repeat(1,1fr);
-    }
+  }
+  .col__three {
+    grid-template-columns: repeat(1, 1fr);
+  }
   .banner__wrapper {
     flex-direction: column-reverse;
   }
@@ -589,14 +586,11 @@ footer styles
     margin-top: 10px;
   }
 
-/* singup page css  */
-.singup_wrapper {
+  /* singup page css  */
+  .singup_wrapper {
     width: 80%;
-}
-.singup__form{
+  }
+  .singup__form {
     padding: 0;
+  }
 }
-}
-
-
-
