--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: inherit;
+  list-style: none;
+  text-decoration: none;
 }
 
 body {
@@ -17,8 +20,8 @@ body {
   --secondary-color: #3a3a3a;
   --product-title-color: #18191f;
   --product_description_color: #787885;
-  --light_gray:#d3d3d3;
-  --white:#fff;
+  --light_gray: #d3d3d3;
+  --white: #fff;
   --primary-font: "Poppins", sans-serif;
   --secondary-font: "Inter", sans-serif;
   --third-font: "Manrope", sans-serif;
@@ -90,10 +93,11 @@ a {
 
 /* make two collumn  */
 .col__two {
-  display: grid;
+  display: flex;
   gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
+
   align-items: center;
+  justify-content: space-between;
 }
 
 /* make three collumn  */
@@ -311,7 +315,7 @@ nav li a {
 .services__content__wrap {
   text-align: center;
 }
-.services__content__wrap h3{
+.services__content__wrap h3 {
   margin: 10px 0;
 }
 /*------------
@@ -323,44 +327,43 @@ services section css end here
 --------------*/
 .splide__slide {
   padding: 40px 50px;
-  text-align: center!important;
+  text-align: center !important;
   background-color: var(--light_gray);
   border-radius: 10px;
-
-} 
+}
 .splide__slide img {
   width: 70px;
   height: 70px;
 }
-.splide__slide h3{
+.splide__slide h3 {
   font-size: 25px;
   margin: 10px 0;
   font-weight: bold;
 }
-.splide__slide p{
+.splide__slide p {
   font-size: 20px;
-  
 }
-.splide__pagination__page.is-active{
+.splide__pagination__page.is-active {
   background-color: var(--white);
   opacity: 1;
 }
-.splide__pagination__page{
+.splide__pagination__page {
   background-color: #000;
   opacity: 1;
 }
-.splide__arrow{
+.splide__arrow {
   background-color: var(--primary-color);
   opacity: 1;
 }
-.splide__arrow svg{
+.splide__arrow svg {
   fill: #fff;
 }
-.splide__slide.is-active.is-visible{
+.splide__slide.is-active.is-visible {
   /* margin: 0 20px; */
   background-color: var(--primary-color);
 }
-.splide__slide.is-active.is-visible h3,.splide__slide.is-active.is-visible p{
+.splide__slide.is-active.is-visible h3,
+.splide__slide.is-active.is-visible p {
   color: var(--white);
 }
 
@@ -368,13 +371,9 @@ services section css end here
 services section css end here
 --------------*/
 
-
-
-
 /*-----------------------
  product section styles 
 -------------------------*/
-
 
 .product__title {
   font-family: var(--primary-font);
@@ -516,88 +515,204 @@ input[type="email"]:focus {
 
 /* search bar css end here  */
 
-
 /*----------------- 
 cart page styles start here
 --------------------*/
 
-table{
+table {
   width: 100%;
   text-align: center;
 }
-table,th,tr,td{
+table,
+th,
+tr,
+td {
   border: 1px solid var(--light_gray);
   padding: 15px;
 }
-table{
+table {
   border-collapse: collapse;
 }
 
-#createCartProduct input[type="number"]{
+#createCartProduct input[type="number"] {
   width: 40%;
   border: 1px solid;
 }
-/* input[type="text"], input[type="number"], input[type="password"], input[type="email"] {
-  padding: 10px 5px;
+
+.total__carts__wrap {
   width: 100%;
-  box-shadow: #3a3a3a;
-  margin-bottom: 10px;
-  border: none;
-  border-bottom: 1px solid var(--primary-color);
-  outline: none;
-  border-radius: 3px;
-} */
+  display: flex;
+  justify-content: end;
+}
+#totalCarts .content__wrap {
+  width: 40%;
+  background: var(--product_description_color);
+  padding: 10px;
+}
+.section__title {
+  text-align: left;
+  color: var(--white);
+}
+.subTotal,
+.total {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  gap: 10px;
+}
+.subTotal {
+  border-bottom: 1px solid var(--light_gray);
+}
+.subTotal p,
+.total p {
+  font-size: 20px;
+  color: var(--white);
+  margin: 0 0 15px 0;
+}
+.total {
+  margin-top: 15px;
+}
+#totalCarts span {
+  color: var(--white);
+  font-size: 18px;
+}
+
+.btn__wrap {
+  text-align: right;
+}
 /*----------------- 
 cart page styles end here
 --------------------*/
 
-
-
-
-
-
-
 /*----------------- 
 footer styles 
 --------------------*/
-
+#footer .col__four{
+  gap: 40px;
+}
 .footer {
   background-color: #0b0725;
   color: #fff;
   text-align: center;
 }
+.footer p {
+  font-size: 20px;
+  margin: 10px 0;
+  text-align: left;
+}
 .logo__content {
   font-family: var(--primary-font);
-  font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 36px;
   font-feature-settings: "liga" off;
   color: #ffffff;
 }
 
-.copy__right {
-  font-family: var(--third-font);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 24px;
-  font-feature-settings: "liga" off;
-  color: #d9dbe1;
-  margin: 10px 0;
-}
-
-.footer ul {
+.address ul {
   display: flex;
-  justify-content: center;
   gap: 15px;
+  text-align: center;
 }
-.footer ul li {
+.address ul li {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   line-height: 40px;
   font-size: 18px;
-  background-color: #23203a;
+  background-color: rgb(78 71 126);
+  transition: 0.5s;
 }
+.address {
+  text-align: left;
+}
+
+.social {
+  margin-top: 10px;
+}
+
+.social li:hover {
+  background-color: var(--primary-color);
+  transition: 0.5s;
+}
+#footer .section__title {
+  font-size: 20px;
+  line-height: 36px;
+  margin-bottom: 0;
+  box-sizing: border-box;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #707070;
+  position: relative;
+}
+#footer .section__title::after{
+  content: "";
+  left: 0;
+  width: 20%;
+  bottom: -2px;
+  position: absolute;
+  background-color: var(--primary-color);
+  height: 2px;
+}
+
+.footerLinks ul {
+  flex-direction: column;
+  display: flex;
+  gap: 15px;
+  text-align: left;
+  margin-top: 20px;
+}
+.footerLinks ul li{
+font-size: 19px;
+transition: .5s;
+}
+.footerLinks p {
+  margin: 20px 0;
+}
+.footerLinks ul li:hover{
+  color: var(--primary-color);
+  padding-left: 5px;
+  transition: .5s;
+}
+.newsletter{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.newsletter .btn {
+  padding: 9px 10px;
+  margin-bottom: 0;
+  margin-top: 0;
+  border-radius: 0;
+  line-height: 21px;
+}
+.newsletter .btn:hover {
+color: #fff;
+}
+.newsletter input[type="email"] {
+  margin-bottom: 0;
+  border-radius: 0;
+  color:#000;
+  font-size: 17px;
+}
+
+.footer__bottom{
+  margin-top: 20px;
+  display: flex;
+  padding-top: 10px;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #707070;
+}
+
+.copy__right {
+  font-family: var(--third-font);
+  font-size: 16px !important;
+  font-feature-settings: "liga" off;
+  color: #fff;
+  margin-top: 0 !important;
+
+}
+
 
 /*-------------------
  resposive styles
